--- a/ExpandedStorage/ExpandedStorage.csproj
+++ b/ExpandedStorage/ExpandedStorage.csproj
@@ -6,7 +6,7 @@
   <PropertyGroup>
     <Name>Expanded Storage</Name>
     <Description>Framework for adding new types of chests to the game.</Description>
-    <Version>3.2.0-beta.1</Version>
+    <Version>3.2.1</Version>
     <EnableHarmony>true</EnableHarmony>
     <RootNamespace>LeFauxMods.ExpandedStorage</RootNamespace>
     <UniqueId>furyx639.ExpandedStorage</UniqueId>
@@ -16,11 +16,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Pathoschild.Stardew.ModTranslationClassBuilder" Version="2.2.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <SMAPIDependency Include="furyx639.FauxCore" Version="2.0.0" required="true" />
     <SMAPIDependency Include="spacechase0.GenericModConfigMenu" Version="1.14.1" required="false" />
   </ItemGroup>
 
