--- a/ExpandedStorage/ExpandedStorage.csproj
+++ b/ExpandedStorage/ExpandedStorage.csproj
@@ -6,7 +6,7 @@
   <PropertyGroup>
     <Name>Expanded Storage</Name>
     <Description>Framework for adding new types of chests to the game.</Description>
-    <Version>3.2.2-beta.1</Version>
+    <Version>3.2.2</Version>
     <EnableHarmony>true</EnableHarmony>
     <RootNamespace>LeFauxMods.ExpandedStorage</RootNamespace>
     <UniqueId>furyx639.ExpandedStorage</UniqueId>
