Add colorful chests and unlimited storage features
- Updated `Constants` with new configuration options.
- Bumped version to 3.3.0 and added package reference.
- Enhanced `GetSummary` in `ModConfig` for detailed output.
- Refactored `ModEntry` to remove old integrations and add new event subscriptions.
- Updated `ConfigMenu` to register new options for colorful chests and unlimited storage.
- Introduced `ExpandedStorageOption` for UI handling of new features.
- Modified `ModPatches` for updated chest drawing and creation logic.
- Updated `ModState` to manage new configuration options and integrations.
- Enhanced `ModExtensions` with methods for chest creation and drawing.
- Localized new options in multiple JSON files.
- Updated `README.md` to reflect translation status.

--- a/ExpandedStorage/ExpandedStorage.csproj
+++ b/ExpandedStorage/ExpandedStorage.csproj
@@ -6,7 +6,7 @@
 	<PropertyGroup>
 		<Name>Expanded Storage</Name>
 		<Description>Framework for adding new types of chests to the game.</Description>
-		<Version>3.2.2</Version>
+		<Version>3.3.0</Version>
 		<EnableHarmony>true</EnableHarmony>
 		<RootNamespace>LeFauxMods.ExpandedStorage</RootNamespace>
 		<UniqueId>furyx639.ExpandedStorage</UniqueId>
@@ -14,6 +14,10 @@
 		<RepositoryUrl>https://github.com/LeFauxMatt/ExpandedStorage</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Pathoschild.Stardew.ModTranslationClassBuilder" Version="2.2.0" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<SMAPIDependency Include="spacechase0.GenericModConfigMenu" Version="1.14.1" required="false" />
